--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="p-4" onclick="playGame('scissors')"><img src="images/scissors-emoji.png" alt=""></button>
         </div>
 
-        <div class="js-results">Computer wins</div>
+        <div class="js-results"></div>
        
         <div class="pick-result | d-flex">
             <div class="player | d-flex align-items-center">
